--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -19,7 +19,7 @@
         <div>
           <ul>
            <% for(var i=0; i<todoList.length; i++){ %>
-              <li> <%= todoList[i] %> </li>
+              <li> <%= todoList[i].content %> </li>
             <% } %>
           </ul>
         </div>
