--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -5,21 +5,27 @@
   </head>
   <body>
     <div class="container" style="padding-top:3em;">
-      <form action="/create" method="POST">
-          <div class="col-auto my-1">
+      <form class="row" action="/create" method="POST">
+          <div class="col-10">
             <label>Enter Todo Items</label>
             <input type="text" class="form-control" name="item" placeholder="Enter something todo" value="">
           </div>
           
-          <div class="col-auto my-1" style="text-align: right;">
+          <div style="text-align: right; padding-top:30px;">
               <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
 
         <div>
-          <ul>
+          <ul class="row align-items-center">
            <% for(var i=0; i<todoList.length; i++){ %>
-              <li> <%= todoList[i].content %> </li>
+              <p class="col-9"> 
+                <%= todoList[i].content %>
+                <form class="col-2" action="/delete/<%= todoList[i].id %>" method="post" style="text-align:right">
+                  <button type="submit" class="btn btn-outline-danger">X</button>
+                </form>
+                <br>
+              </p>
             <% } %>
           </ul>
         </div>
