show and update is available

--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -2,6 +2,11 @@
   <head>
     <title>INDEX</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+      a:link{color: black; text-decoration: none;}
+      a:visited{color: black;}
+      a:hover{color: lightblue; text-decoration: none;}
+    </style>
   </head>
   <body>
     <div class="container" style="padding-top:3em;">
@@ -20,7 +25,7 @@
           <ul class="row align-items-center">
            <% for(var i=0; i<todoList.length; i++){ %>
               <p class="col-9"> 
-                <%= todoList[i].content %>
+                <a href="/show/<%= todoList[i].id %>"><%= todoList[i].content %></a>
                 <form class="col-2" action="/delete/<%= todoList[i].id %>" method="post" style="text-align:right">
                   <button type="submit" class="btn btn-outline-danger">X</button>
                 </form>
